fix overflow

--- a/src/styles/base/_fix-buefy.sass
+++ b/src/styles/base/_fix-buefy.sass
@@ -1,3 +1,6 @@
+html
+    overflow-y: auto
+
 .button.is-text.is-noline
     text-decoration: none
 
